--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_anulacion_materias2.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_anulacion_materias2.html.twig
@@ -158,7 +158,7 @@
                             {
                                      modelessMateriasInscribir= new $.flavr({
                                                            modal   : true,
-                                                           content : 'Sr. Estudiante, debe realizar la seleccion de Materias de manera correcta',
+                                                           content : 'Sr. Estudiante, debe realizar la selección de Materias de manera correcta',
                                                            buttons     : {
                                                               primary : { text: 'Aceptar', style: 'primary' }
                                                            }
@@ -208,7 +208,7 @@
                                         $('#btnsolanula').remove();
                                         modelessAnulaMateriap= new $.flavr({
                                                            modal   : true,
-                                                           content : 'Sr. Estudiante, Su solicitud de Anulacion fue Enviada de Manera Exitosa ',
+                                                           content : 'Sr. Estudiante, Su solicitud de Anulación fue Enviada de Manera Exitosa ',
                                                            buttons     : {
                                                               primary : { text: 'Aceptar', style: 'primary',
                                                                    action: function(){
