--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_carrerasmatricula.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_carrerasmatricula.html.twig
@@ -109,10 +109,10 @@
   {% if lnCuantos==0 %}
       <div class='menu_derecho' id='div_derecho'>
           <div class="panel-body">
-                      <h2 align="center"><b>Carreras en Proceso de Matriculacion</b></h2>
+                      <h2 align="center"><b>Carreras en Proceso de Matriculación</b></h2>
                        <div class="panel panel-default">
                                   <div class="panel-heading"> 
-                                      No existen Carreras en proceso de Matriculacion
+                                      No existen Carreras en proceso de Matriculación
                                   </div>
                         </div>
           </div>
