--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_matriculacion2.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_matriculacion2.html.twig
@@ -364,7 +364,7 @@
                                     <span class="step_no">2</span>
                                     <span class="step_descr">
                             Paso 2<br />
-                            <small>Seleccion de Materias</small>
+                            <small>Selección de Materias</small>
                         </span>
                                 </a>
                             </li>
