--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_home.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_home.html.twig
@@ -38,7 +38,7 @@
                                                                   </li> -->
                                                               </ul>
 
-                                                              <div class="tab-content" style="border: 0px !important;height: 450px;overflow-x:hidden; overflow-y:scroll;">
+                                                              <div class="tab-content" style="font-size:10px; border: 0px !important;height: 450px;overflow-x:hidden; overflow-y:scroll;">
                                                                        <div class="tab-pane fade in active" id="ctn_{{ facultad.Carrera }}_{{ facultad.Facultad }}" style="width: 100% !important">
                                                                           
                                                                       </div>
