--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/login.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/login.html.twig
@@ -62,6 +62,10 @@ img#refresh{float:right;margin: 0px 7px 0px 49px;cursor:pointer;}
       }
   }
 
+function SoloNumeros(e) {
+    var tecla = document.all ? tecla = e.keyCode : tecla = e.which;
+    return ((tecla > 47 && tecla < 58) || (tecla >= 00 && tecla < 32) || tecla == 127);
+}
 
   $(document).ready(function(){
     setTimeout('login();',1000);
@@ -134,7 +138,7 @@ function login(){
      $('.login-are').removeAttr('click');
     var html =
         '   <div class="form-row">' +
-        '       <input id="username" type="text" name="username" onkeypress="return valideKey(event);" onkeydown="enterT(event)" maxlength="10"' +
+        '       <input id="username" type="text" name="username" onkeypress="return SoloNumeros(event);" onkeydown="enterT(event)" maxlength="10"' +
         '       placeholder="Username"  required /> <p class="help-block"></p>' +
         '   </div>' +
         '   <div class="form-row">' +
