--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_home.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_home.html.twig
@@ -10,7 +10,7 @@
             </div>-->
             <!-- .panel-heading -->
             <div class="panel-body">
-                      <h2 align="center"><b>Carreras en Curso</b></h2>
+                      <h2 align="center"><b><i class="fa fa-fw fa-university"></i> Carreras en Curso</b></h2>
               <div class="panel-group" id="accordion">
                 
                   
@@ -19,7 +19,7 @@
                               <div class="panel panel-default">
                                   <div class="panel-heading">  
                                       <h4 class="panel-title">
-                                          <a data-toggle="collapse" data-parent="#accordion" href="#{{ facultad.Carrera }}_{{ facultad.Facultad }}" class='tabscarrera' id="na_{{ facultad.Carrera }}_{{ facultad.Facultad }}_{{ facultad.idCiclo }}_f" >{{ facultad.Nombre }}</a>
+                                         <a data-toggle="collapse" data-parent="#accordion" href="#{{ facultad.Carrera }}_{{ facultad.Facultad }}" class='tabscarrera' id="na_{{ facultad.Carrera }}_{{ facultad.Facultad }}_{{ facultad.idCiclo }}_f" ><u>{{ facultad.Nombre }}</u></a>
                                       </h4>
                                   </div>
 
@@ -38,7 +38,7 @@
                                                                   </li> -->
                                                               </ul>
 
-                                                              <div class="tab-content" style="border: 0px !important;height: 450px;overflow-x:hidden; overflow-y:scroll;">
+                                                              <div class="tab-content" style="font-size:10px; border: 0px !important;height: 450px;overflow-x:hidden; overflow-y:scroll;">
                                                                        <div class="tab-pane fade in active" id="ctn_{{ facultad.Carrera }}_{{ facultad.Facultad }}" style="width: 100% !important">
                                                                           
                                                                       </div>
