--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_matriculacion2.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_matriculacion2.html.twig
@@ -121,7 +121,7 @@
                                 {
                                         modelessMateriasInscribir= new $.flavr({
                                                            modal   : true,
-                                                           content : 'Sr. Estudiante, el maximo de materias para registrarse es de: '+maxmaterias+'.<br/> Por favor revise la seleccion de Materias',
+                                                           content : 'Sr. Estudiante, el máximo de materias para registrarse es de: '+maxmaterias+'.<br/> Por favor revise la selección de Materias',
                                                            buttons     : {
                                                               primary : { text: 'Aceptar', style: 'primary' }
                                                            }
@@ -131,7 +131,7 @@
                                 {
                                      modelessMateriasInscribir= new $.flavr({
                                                            modal   : true,
-                                                           content : 'Sr. Estudiante, debe realizar la seleccion de cursos de manera correcta',
+                                                           content : 'Sr. Estudiante, debe realizar la máximo de cursos de manera correcta',
                                                            buttons     : {
                                                               primary : { text: 'Aceptar', style: 'primary' }
                                                            }
@@ -364,7 +364,7 @@
                                     <span class="step_no">2</span>
                                     <span class="step_descr">
                             Paso 2<br />
-                            <small>Seleccion de Materias</small>
+                            <small>Selección de Materias</small>
                         </span>
                                 </a>
                             </li>
@@ -429,7 +429,7 @@
                         </div>
                         <div id="step-2" class="tab2">
 
-                            <h4 class="StepTitle" align="center" >Seleccion de Materias</h4>
+                            <h4 class="StepTitle" align="center" >Selección de Materias</h4>
                                         <div class="col-lg-12">
                                             
                                             <div class="panel panel-default">
