--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
@@ -65,24 +65,10 @@
   setTimeout('login();',1000);
 });
 
-  function valideKey(evt)
-    {
-      var code = (evt.which) ? evt.which : evt.keyCode;
-      if(code==8)
-      {
-          //backspace
-          return true;
-      }
-      else if(code>=48 && code<=57)
-      {
-          //is a number
-          return true;
-      }
-      else
-      {
-          return false;
-      }
-  }
+function SoloNumeros(e) {
+    var tecla = document.all ? tecla = e.keyCode : tecla = e.which;
+    return ((tecla > 47 && tecla < 58) || (tecla >= 00 && tecla < 32) || tecla == 127);
+}
 
 var btn_login = 0;
 
@@ -148,7 +134,7 @@ function login(stringvalue){
           var html =
           '<div class="flavr-message"> Usuario:</div>'+
           '<div class="form-row">' +
-          '<input id="usuario" type="text" name="usuario" onkeypress="return valideKey(event);" maxlength="10"' +
+          '<input id="usuario" type="text" name="usuario" onkeypress="return SoloNumeros(event);" maxlength="10"' +
           'placeholder="Usuario"  required /> <p class="help-block"></p>' +
           '</div>' +
           '<div class="flavr-message"> Ingrese Contraseña:</div>'+
