--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
@@ -52,6 +52,12 @@
 
               </p>
             </li>
+            <!-- Menu Body -->
+                  <li class="user-body">
+                    <div class="col-xs-12 text-center">
+                      <a href="{{path('admin_academico_cambio_pass_int')}}">Cambio Contraseña</a>
+                    </div>
+                  </li>
             <!-- Menu Footer-->
             <li class="user-footer">
                <div  id="editarPerfil" id="editarPerfil" class="pull-left" >
@@ -74,9 +80,6 @@
           <a href="{{path('SisAcademico_Docentes_home')}}"><i class="fa fa-user-plus"></i></a>
         </li>
         {% endif %}
-        <li>
-          <a href="{{path('admin_academico_cambio_pass_int')}}"><i class="fa fa-cog"></i></a>
-        </li>
       </ul>
     </div>
   </nav>
