--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/EstudiantesxDocentes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/EstudiantesxDocentes.html.twig
@@ -8,7 +8,7 @@
       </div>-->
       <!-- .panel-heading -->
       <div class="panel-body">
-                <h2 align="center"><b>Listado de Carreras</b></h2>
+                <h2 align="center"><b>Listado de Estudiantes por Docentes</b></h2>
         <div class="panel-group" id="accordion">
           
             
@@ -22,7 +22,7 @@
                             </div>
 
                             <div id="orden_{{ facultad.Ciclo }}_{{ facultad.Carrera }}_{{ facultad.Facultad }}" class="panel-collapse collapse">
-                                   <div class="table-responsive">
+                                   <div class="table-responsive" style="overflow:hidden;">
                                              <div class="tab-pane fade in active" id="ctnordenpago_{{ facultad.Ciclo }}_{{ facultad.Carrera }}_{{ facultad.Facultad }}" style="width: 100% !important">
                                                 
                                             </div>
