--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/carreras_inscripcion.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/carreras_inscripcion.html.twig
@@ -8,7 +8,7 @@
       </div>-->
       <!-- .panel-heading -->
       <div class="panel-body">
-                <h2 align="center"><b>Listado de Carreras</b></h2>
+                <h2 align="center"><b>Registro de Inscripción</b></h2>
         <div class="panel-group" id="accordion">
           
             
