--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_buscar_inscripcion.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_buscar_inscripcion.html.twig
@@ -1,109 +1,86 @@
 <div class="col-lg-12">
-<div class="table-responsive">
+  <div class="table-responsive">
+    <div class="col-lg-12" style="margin-top:10px;">
+      <div class="col-lg-5" style="margin-bottom: 20px;margin-top: 6px;">
+        <div class="col-lg-4" style="padding-top: 6px; font-weight: bold;"></div>
+        <div class="col-lg-4" style="padding-top: 6px; font-weight: bold;">Criterio de Consulta</div>
+        <div class="col-lg-4" style="padding-top: 3px;"><select  name='selconsulta'><option value="cedula" > Cédula de Identidad</option></select ></div>
+      </div>
+      
+      <div class="col-lg-4" style="margin-bottom: 20px;margin-top: 6px;">
+        <div class="col-lg-5" style="padding-top: 6px; font-weight: bold;">Número de Cédula</div>
+        <div class="col-lg-4" style="padding-top: 3px;"><input maxlength="10" onkeypress="return SoloNumeros(event);" onkeyup = "if(event.keyCode == 13) onkeydato()" style="height:22px" type="text" id="busquedaest" /></div>
+      </div>
 
-    <table align='center'>
-            <thead>
-                <tr>
-                    <th align='center' colspan='4'>
-                          <h4 align="center"><b>Registro de Inscripción</b></h4>  
-                    </th>
-                </tr>
-                <tr>
-                    <th style="text-align:center">
-                          Criterio de Consulta
-                    </th>
-                  
-                    <th style="text-align:center">
-                          Número de Cédula
-                    </th>
-                </tr>
-            </thead>
-            <tr>
-                    
-                    <td align='left' valign='center'>
-                        
-                        <select  name='selconsulta'>
-                          <option value="cedula" > Cédula de Identidad</option>
-                        </select >
-               
-                    <td align='left'>
-                           <input onkeyup = "if(event.keyCode == 13) onkeydato()" style="height:22px" type="text" id="busquedaest" /> 
-                    </td>
-                    
-            </tr>
-            <tr>
-                    
-                    
-            </tr>
-            <tr>
-                    <td align='center' colspan='3'>
-                             <br/>
-                            <a class="btn btn-success " id='btnconsultarest'>Consultar</a>
-                              <!-- <input type="submit" name="btnconsultarest" id="btnconsultarest" value="Inscribir"> -->
+      <div class="col-lg-3" style="margin-bottom: 20px;">
+        <div class="col-lg-4" style="padding-top: 3px;"><a class="btn btn-primary " id='btnconsultarest'>Consultar</a></div>
+      </div>
+    </div>
+  </div>
+</div>
 
-                    </td>
-            </tr>
-    </table>
-</div>
-</div>
-<div id='divodenespagos'>
-
-</div>
+<div id='divodenespagos'></div>
 
 <script language="javascript">
-        $(document).ready(function() {
-            $('#btnconsultarest').on("click",function(event){
-                onkeydato();
-            });
-        })
+
+function SoloNumeros(e) {
+    var tecla = document.all ? tecla = e.keyCode : tecla = e.which;
+    return ((tecla > 47 && tecla < 58) || (tecla >= 00 && tecla < 32) || tecla == 127);
+}
+  
+  $(document).ready(function() {
+      $('#btnconsultarest').on("click",function(event){
+          onkeydato();
+      });
+  })
     
-    function onkeydato() 
+  function onkeydato() 
+  {
+    var elecmentocombo = document.getElementsByName("selconsulta"); 
+    var indice=elecmentocombo[0].options.selectedIndex;
+    var criterio =elecmentocombo[0].options[indice].value;
+    var valorBuscado=$("#busquedaest").val();
+    var idCarrera='{{idCarrera}}';
+    var idCiclo='{{idCiclo}}';
+    var carrera='{{carrera}}';
+    var obj_data = {'idEstudiante':valorBuscado,'idCarrera':idCarrera,'idCiclo':idCiclo,'criterio':criterio,'carrera':carrera};
+    var resultado = $('#divodenespagos');
+    var jumpAction = '{{path('admin_inscripcion_listar')}}';
+    // Enviamos el formulario usando AJAX
+    if (valorBuscado.length!=0)
     {
-                var elecmentocombo = document.getElementsByName("selconsulta"); 
-                var indice=elecmentocombo[0].options.selectedIndex;
-                var criterio =elecmentocombo[0].options[indice].value;
-                var valorBuscado=$("#busquedaest").val();
-                var idCarrera='{{idCarrera}}';
-                var idCiclo='{{idCiclo}}';
-                var carrera='{{carrera}}';
-                var obj_data = {'idEstudiante':valorBuscado,'idCarrera':idCarrera,'idCiclo':idCiclo,'criterio':criterio,'carrera':carrera};
-                var resultado = $('#divodenespagos');
-                var jumpAction = '{{path('admin_inscripcion_listar')}}';
-          // Enviamos el formulario usando AJAX
-                if (valorBuscado.length!=0)
-                {
-                     $.ajax({
-                           url:   jumpAction,
-                           data: obj_data,
-                           type:  'post',
-                           async: true,
-                           beforeSend: function () 
-                           {
-                             resultado.html("Cargando, espere por favor...");
-                           },
-                           success:  function (dataResponse) 
-                           {
-                             resultado.html(dataResponse);
-                           },
-                           error: function(dataResponse)
-                           {
-                              form="accordion";
-                              msg_alert = alert_bootstrap( form, 'Atenci&oacute;n', "Nos encontramos en mantenimiento de nuestros servidores, por favor intenta nuevamente m&aacute;s tarde.", 'sm', 'alert');
-                                      $( '#'+form ).append( msg_alert );
-                                      $('#modal-'+form).modal('show');
-                           },
-                           dataType:'html'
-                        });
-                }
-                else
-                {
-                     modelessActualizadOrden= new $.flavr({
-                                                   modal   : true,
-                                                   content : 'Por favor, ingrese un dato para consultar',
-                                                   buttons     : {
-                                                      primary : { text: 'Aceptar', style: 'primary' }
-                                                   }
-                                                });
-                }
-            }            
+      $.ajax({
+             url:   jumpAction,
+             data: obj_data,
+             type:  'post',
+             async: true,
+             beforeSend: function () 
+             {
+               resultado.html("Cargando, espere por favor...");
+             },
+             success:  function (dataResponse) 
+             {
+               resultado.html(dataResponse);
+             },
+             error: function(dataResponse)
+             {
+                form="accordion";
+                msg_alert = alert_bootstrap( form, 'Atenci&oacute;n', "Nos encontramos en mantenimiento de nuestros servidores, por favor intenta nuevamente m&aacute;s tarde.", 'sm', 'alert');
+                        $( '#'+form ).append( msg_alert );
+                        $('#modal-'+form).modal('show');
+             },
+             dataType:'html'
+      });
+    }
+    else
+    {
+      modelessActualizadOrden= new $.flavr({
+                                            modal   : true,
+                                            content : 'Por favor, ingrese un dato para consultar',
+                                            buttons     : {
+                                            primary : { text: 'Aceptar', style: 'primary' }
+                                            }
+                                          });
+    }
+}            
 </script>
