--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_buscar_orden.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_buscar_orden.html.twig
@@ -1,63 +1,35 @@
 
 <div class="col-lg-12">
-<div class="table-responsive">
+  <div class="table-responsive">
+    <div class="col-lg-12" style="margin-top:10px;">
+      <div class="col-lg-7" style="margin-bottom: 20px;margin-top: 6px;"> 
+        <div class="col-lg-3" style="padding-top: 6px; font-weight: bold;">Criterio de Consulta:</div>
+        <div class="col-lg-4" style="padding-top: 6px;">
+          <select  name='selconsulta'>
+            <option value="cedula" > Cedula de Identidad</option>
+            <option value="codigo"> Codigo del Estudiante </option>
+          </select >
+        </div>
+            
+          <div class="col-lg-2" style="padding-top: 6px; font-weight: bold;">Estados:</div>
+          <div class="col-lg-3" style="padding-top: 6px;">
+            <select  name='selestadoord'>
+              <option value="79" >Pendientes</option>
+              <option value="81"> Pagadas</option>
+              <option value="80"> Anuladas</option>
+            </select >
+          </div>
+      </div>
 
-    <table align='center'>
-            <thead>
-                <tr>
-                    <th align='center' colspan='4'>
-                          <h4><b>Legalización de Órdenes de Pagos </b></h4>  
-                    </th>
-                </tr>
-                <tr>
-                    <th style="text-align:center">
-                          Criterio de Consulta
-                    </th>
-                    <th style="text-align:center">
-                          Estados
-                    </th>
-                    <th style="text-align:center">
-                          Dato a Consultar
-                    </th>
-                </tr>
-            </thead>
-            <tr>
-                    
-                    <td align='left' valign='center'>
-                        
-                        <select  name='selconsulta'>
-                          <option value="cedula" > Cedula de Identidad</option>
-                          <option value="codigo"> Codigo del Estudiante </option>
-                        </select >
-                    </td>
-                    <td>
-                        
-                        <select  name='selestadoord'>
-                          <option value="79" >Pendientes</option>
-                          <option value="81"> Pagadas</option>
-                          <option value="80"> Anuladas</option>
-                        </select >  
-                    </td>
-                    <td align='left'>
-                           <input onkeyup = "if(event.keyCode == 13) onkeydato()" style="height:22px" type="text" id="busquedaest" /> 
-                    </td>
-                    
-            </tr>
-            <tr>
-                    
-                    
-            </tr>
-            <tr>
-                    <td align='center' colspan='3'>
-                             <br/>
-                            <a class="btn btn-success " id='btnconsultarest'>Consultar</a>
-                              <!-- <input type="submit" name="btnconsultarest" id="btnconsultarest" value="Inscribir"> -->
+      <div class="col-lg-5" style="margin-bottom: 20px;margin-top: 6px;">
+        <div class="col-lg-4" style="padding-top: 6px; font-weight: bold;">Dato a Consultar:</div>
+          <div class="col-lg-5" style="padding-top: 6px;"><input maxlength="10" onkeypress="return SoloNumeros(event);" onkeyup = "if(event.keyCode == 13) onkeydato()" style="height:22px" type="text" id="busquedaest" /></div>
+        <div class="col-lg-3" style="padding-top: 3px;"><a class="btn btn-primary " id='btnconsultarest'>Consultar</a></div>
+      </div>
+    </div>
+  </div>
+</div>
 
-                    </td>
-            </tr>
-    </table>
-</div>
-</div>
 <div id='divodenespagos'>
 
 </div>
@@ -68,6 +40,11 @@
                 onkeydato();
             });
         })
+
+  function SoloNumeros(e) {
+    var tecla = document.all ? tecla = e.keyCode : tecla = e.which;
+    return ((tecla > 47 && tecla < 58) || (tecla >= 00 && tecla < 32) || tecla == 127);
+  }
     
     function onkeydato() {
                 var elecmentocombo = document.getElementsByName("selconsulta"); 
