--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_listado_anulacion.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_listado_anulacion.html.twig
@@ -1,5 +1,4 @@
 <div class="col-lg-12 divordentemp" >
-    <h4 class="StepTitle" align="center" >Listado de Anulaciones</h4>
         <div class="panel panel-default" >
             <!-- /.panel-heading -->
             <div class="panel-body" >
@@ -7,14 +6,12 @@
                 <div class="col-lg-12">
                     <div class="table-responsive"  id="divordentemp">
                     
-                    <table  align='center' border='1' >
-                        <thead>
+                    <table  align='center' class="table table-bordered table-hover">
+                    <caption STYLE="text-align:center;font-size: 15px;"><label>Listado de Anulaciones</label></caption>
+                        <thead style="background-color: #3C8DBC;color:#fff;">
                             <tr>
-                                <td colspan='6'><div style="background-color: #0B2161; color: white;font-size:15pt ;" align="center">Solicitudes</div></td>
-                            </tr>
-                            <tr>
-                                <th style="text-align:center" >Id Tipo Solicitud</th>
-                                <th style="text-align:center" >Tipo Solicitud</th>
+                                <th style="text-align:center">Id Tipo Solicitud</th>
+                                <th style="text-align:center">Tipo Solicitud</th>
                                 <th style="text-align:center">Estudiante</th>
                                 <th style="text-align:center">Estado</th>
                                 <th style="text-align:center">Id estado</th>
@@ -24,8 +21,8 @@
                         <tbody>
                                {% for listado in inscripcion %}    
                                  <tr class="odd gradeX">
-                                    <td   align="center"   width='5%' id="tipo_solicitud_{{ listado.id_tipo_solicitud }}">{{ listado.id_tipo_solicitud }}</td>
-                                    <td   align="center"   width='5%' id="tipo_{{ listado.tipo }}">{{ listado.tipo }}</td>
+                                    <td align="center"   width='5%' id="tipo_solicitud_{{ listado.id_tipo_solicitud }}">{{ listado.id_tipo_solicitud }}</td>
+                                    <td align="center"   width='5%' id="tipo_{{ listado.tipo }}">{{ listado.tipo }}</td>
                                     <td align="center" width='5%' id="nombre_{{ listado.solicitante }}">{{ listado.solicitante }}</td>
                                     <td align="center" width='5%' id="estado_{{ listado.estado }}">{{ listado.estado }}</td>
                                     <td align="center" width='5%' id="idestado_{{ listado.id_estado }}">{{ listado.id_estado }}</td>
