--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_listado_inscripcion.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_listado_inscripcion.html.twig
@@ -1,6 +1,5 @@
 
 <div class="col-lg-12 divordentemp">
-    <h4 class="StepTitle" align="center" >Listado de Materias</h4>
         <div class="panel panel-default">
             <!-- /.panel-heading -->
             <div class="panel-body">
@@ -8,14 +7,12 @@
                 <div class="col-lg-12">
                     <div class="table-responsive">
                     
-                    <table  align='center' border='1' id="table-listarpago">
-                        <thead>
+                    <table  align='center' class="table table-bordered table-hover" id="table-listarpago">
+                      <caption STYLE="text-align:center;font-size: 15px;"><label>{{ estudiante }}{{ estudiante_ap }}    -    Nº. Identificación: {{ identificacion }}    -    Estado de Matricula: {{ EstadoAlumno }}</label></caption>
+                        <thead style="background-color: #3C8DBC;color:#fff;">
                             <tr>
-                                <td colspan='5'><input   class="form-control" id="disabledInput" type="text" placeholder="Nombres : {{ estudiante }}  Apellidos : {{ estudiante_ap }}  Identificacion : {{ identificacion }}  Estado:{{ EstadoAlumno }}" disabled STYLE="color: #FFFFFF; font-family: Verdana; font-weight: bold; font-size: 15px; background-color: #0B2161;" > </td>
-                            </tr>
-                            <tr>
-                                <th style="text-align:center" >Nivel</th>
-                                <th style="text-align:center" >Id Materia</th>
+                                <th style="text-align:center">Nivel</th>
+                                <th style="text-align:center">Id Materia</th>
                                 <th style="text-align:center">Materia</th>
                                 <th style="text-align:center">Curso</th>
                                 <th style="text-align:center">Veces</th>
@@ -24,9 +21,9 @@
                         <tbody>
                                {% for listado in inscripcion %}    
                                  <tr class="odd gradeX">
-                                    <td   align="center"   width='5%' id="nivel_{{ listado.nivel }}">{{ listado.nivel }}</td>
-                                    <td   align="center"   width='5%' id="idmat_{{ listado.id_sa_materia }}">{{ listado.id_sa_materia }}</td>
-                                    <td align="center" width='5%' id="nombre_{{ listado.nombre }}">{{ listado.nombre }}</td>
+                                    <td align="center" width='5%' id="nivel_{{ listado.nivel }}">{{ listado.nivel }}</td>
+                                    <td align="center" width='5%' id="idmat_{{ listado.id_sa_materia }}">{{ listado.id_sa_materia }}</td>
+                                    <td style="padding: 0 2%" width='5%' id="nombre_{{ listado.nombre }}">{{ listado.nombre }}</td>
                                     <td align="center" width='5%' id="curso_{{ listado.curso }}">{{ listado.curso }}</td>
                                     <td align="center" width='5%' id="veces_{{ listado.veces }}">{{ listado.veces }}</td>
                                 </tr>
@@ -50,17 +47,19 @@
                                             <td width='5%' colspan='2' align="right">
                                               {% if (EstadoAlumno=='REGISTRADO')%}
                                              
-                                              <a class="btn btn-success" id='btnlegalorden'>Inscribir</a>
+                                              <a class="btn btn-primary" id='btnlegalorden'>Inscribir</a>
                                               
                                               {% endif %}
-                                              <a class="btn btn-success" id='btnpdfordenpag' href="{{ path('admin_pdf_ordenpago',{ 'idEstudiante': idUsuarioEst,'idCarrera':idCarrera,'ciclo':idCiclo,'carrera':carrera,'identificacion':identificacion}) }}" target="_blank">Imprimir Orden de Pago</a>
-
+                                              
                                             </td>
                                     </tr>
                            
                         </tfoot>
                     
                     </table>
+                    <div class="col-lg-12" style="margin-top:10px;"><div class="col-lg-10"></div><div class="col-lg-2" style="right:-5px; padding-top: 6px; font-weight: bold;">
+                      <a class="btn btn-primary" id='btnpdfordenpag' href="{{ path('admin_pdf_ordenpago',{ 'idEstudiante': idUsuarioEst,'idCarrera':idCarrera,'ciclo':idCiclo,'carrera':carrera,'identificacion':identificacion}) }}" target="_blank">Imprimir Orden de Pago</a>
+                    </div></div>
                 </div>
                 </div>
                 <!-- /.table-responsive -->
