--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/listaEstudiantes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/listaEstudiantes.html.twig
@@ -5,61 +5,46 @@
         <script src="{{ asset('js/jqueryValidate/dist/additional-methods.js') }}"></script>
 {#<link href="{{ asset('bower_components/bootstrap/dist/css/bootstrap.css')}}" type="text/css" rel="stylesheet"/>#}
 <form id="form-listaEstudiantes2" name="form-listaEstudiantes2" method="post" action="{{ path('docentes_actualiza_asistencia') }}" onsubmit="return false;">     
-<div class="row" id="tabla1">
-                <div class="col-xs-12">
-                  <div ng-controller="AppCtrl">
- 
-   
-</div>
-                      
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <h2 align="center"><b>Listado de Estudiantes por Docentes</b></h2>
-                          <div class="row" >
-                            {#<div class="row" style="padding-left: 25px;">#}
-                                <div class="row " >
-                                <div style="padding-top: 25px;margin-left: 20px" class="col-xs-6">
-                                      <label class="control-label"  >Docente :</label>
-                                        <select id="idDocente" name="idDocente" onchange="changeSelect(this.id, '{{ path('admin_cmb_materias') }}')" >   
-                                                 {{ docente | raw }}                       
-                                         </select>
-                                 </div>
-                                 <div id="content-idDocente" class="col-xs-5" style="float:right;padding-top: 25px;">
-                                      <label class="control-label" >Materia :</label>
-                                        <select id="idMateria" name="idMateria" disabled>   
-                                                 {{ materia | raw }}                       
-                                         </select>
-                                 </div>
-                                 </div>
-                                <div class="center-block" style="display:block;margin-right:auto;margin-left:30%">
-                                 <div class="col-xs-2" style="padding-top: 20px;"><button class="btn btn-primary" type="button" onclick="mostrarAlumnos('listaEstudiantes','{{ path('admin_muestra_estudiantes') }}')">Consultar</button></div>
-                                 <div class="col-xs-2" style="padding-top: 20px;margin-left:15%;">
-                                     <button class="btn btn-primary" type="button" 
-                                             onclick="hrefdocentes('{{ path('admin_cargar_pagina') }}')">Exportar a PDF</button>
-                                 </div>
-                                 </div>
-                            {#</div>#}
-                            
-                            <div class="col-xs-12" style="margin-bottom: 20px;">
-                                &nbsp;
-                            </div>
-                             <input type = "hidden" value = "{{ idCarrera }}" id = "hdCarrera" name = "hdCarrera" />
-                             <div class="dataTable_wrapper col-xs-12 div-scroll-y" id="content-listaEstudiantes">
-                                 
-                            
-                         </div>
-                        </div>
-                            <!-- /.table-responsive -->
-                    
-                        </div>
-                    
-                    <!-- /.panel -->
-                </div>
-                <!-- /.col-lg-12 -->
+    <div class="row" id="tabla1">
+        <div class="col-xs-12">
+            <div ng-controller="AppCtrl">
             </div>
-                                   <div id="content-ingresonotas">
-                                       </div>
+            <!-- /.panel-heading -->
+            <div class="panel-body">
+                <div class="row" >
 
+
+
+                    <div class="col-lg-12" >
+                        <div class="col-lg-8" style="margin-bottom: 20px;margin-top: 6px;">
+                            <div class="col-lg-1" style="padding-top: 6px; font-weight: bold;"><label class="control-label"  >Docente:</label></div>
+                            <div class="col-lg-6" style="padding-top: 6px;"><select id="idDocente" name="idDocente" onchange="changeSelect(this.id, '{{ path('admin_cmb_materias') }}')" >{{ docente | raw }}</select></div>
+                            <div class="col-lg-1" style="padding-top: 6px; font-weight: bold;"><label class="control-label" >Materia:</label></div>
+                            <div id="content-idDocente" class="col-lg-3" style="padding-top: 6px;"><select id="idMateria" name="idMateria" disabled>{{ materia | raw }}</select></div>
+                        </div>
+                        <div class="col-lg-4" >
+                            <div class="col-lg-6" style="padding-top: 6px;">
+                                <button class="btn btn-primary" type="button" onclick="mostrarAlumnos('listaEstudiantes','{{ path('admin_muestra_estudiantes') }}')">Consultar</button>
+                            </div>
+                            <div class="col-lg-6" style="padding-top: 6px;">
+                                <button class="btn btn-success" type="button" onclick="hrefdocentes('{{ path('admin_cargar_pagina') }}')">Exportar a PDF</button>
+                            </div>
+                        </div>
+                    </div>
+
+
+                
+                    <div class="col-lg-12" style="margin-bottom: 20px;">&nbsp;</div>
+                    <input type = "hidden" value = "{{ idCarrera }}" id = "hdCarrera" name = "hdCarrera" />
+                    <div class="col-lg-12" id="content-listaEstudiantes"></div>
+                </div>
+                <!-- /.table-responsive -->
+            </div>
+        <!-- /.panel -->
+        </div>
+        <!-- /.col-lg-12 -->
+    </div>
+    <div id="content-ingresonotas"></div>
 </form>
                            
                                    
