--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/tablaEstudiantes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/tablaEstudiantes.html.twig
@@ -2,39 +2,31 @@
 
 
 <div class="row col-xs-12" style="padding-left: 25px;">
-                                    <div class="col-xs-4">
-                                        <label class="control-label" >Docente : </label>{{docente_text}}
-                                    </div>
-                                    <div class="col-xs-4">
-                                        <label>Materia : </label>{{materia_text}}
-                                    </div>
-                                    <div class="col-xs-2">
-                                        <label>Paralelo : </label>{{paralelo}}
-                                    </div>
-                                    <div class="col-xs-2">
-                                        <label>Fecha : </label>{{fecha}}
-                                    </div>
-                            </div>
-   <div class="col-xs-12" style="margin-bottom: 20px;">
-        &nbsp;
-    </div>
-    <table class="table table-striped table-bordered table-hover" id="dataTables-example" border="1" style="display:block;margin-right:auto;margin-left:auto">
-        <thead>
-            <tr>
-                <th class="text-center " style="vertical-align: middle;background-color: #337AB7;" >Codigo</th>
-                <th style="text-align: center;vertical-align: middle;background-color: #337AB7;">Estudiante</th>
-            </tr>
+    <div class="col-xs-4"><label class="control-label" >Docente:  </label> {{docente_text}}</div>
+    <div class="col-xs-4"><label>Materia:  </label> {{materia_text}}</div>
+    <div class="col-xs-2"><label>Paralelo:  </label> {{paralelo}}</div>
+    <div class="col-xs-2"><label>Fecha:  </label> {{fecha}}</div>
+</div>
 
-        </thead>
-        <tbody>
-    {%for count ,alumnos in arr_datos %}
-           <tr class="odd gradeX">
-               <td width = "40%" style="text-align: center;vertical-align: middle">{{ alumnos.id_sg_usuario }}</td>
-                <td width = "60%" style="text-align: center;vertical-align: middle">{{ alumnos.nombres }} </td>
-               
-           </tr>
-    {% endfor %}
-       </tbody>
-       <input type = "hidden" value = "{{arr_datos|length}}" name = "hdcountalm" />
-    </table>
-                            
+<div class="col-xs-12" style="margin-bottom: 20px;">
+    &nbsp;
+</div>
+<table class="table table-bordered table-hover" id="dataTables-example" style="width:50%; margin-right:auto;margin-left:auto">
+    <thead style="background-color: #3C8DBC;color:#fff;">
+        <tr>
+            <th class="text-center">Codigo</th>
+            <th class="text-center">Estudiante</th>
+        </tr>
+
+    </thead>
+    <tbody>
+{%for count ,alumnos in arr_datos %}
+       <tr class="odd gradeX">
+           <td width = "40%" style="text-align: center;vertical-align: middle">{{ alumnos.id_sg_usuario }}</td>
+            <td width = "60%" style="text-align: center;vertical-align: middle">{{ alumnos.nombres }} </td>
+           
+       </tr>
+{% endfor %}
+   </tbody>
+   <input type = "hidden" value = "{{arr_datos|length}}" name = "hdcountalm" />
+</table>
