--- a/appAcademico/web/theme/main.css
+++ b/appAcademico/web/theme/main.css
@@ -1,3 +1,5 @@
+.tab-content{font-size: 12px !important;}
+
 .panel-group .panel .panel-title {
     font-size: 85% !important;
     font-weight: bold !important;
