--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_listado_inscripcion.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_listado_inscripcion.html.twig
@@ -58,7 +58,7 @@
                     
                     </table>
                     <div class="col-lg-12" style="margin-top:10px;"><div class="col-lg-10"></div><div class="col-lg-2" style="right:-5px; padding-top: 6px; font-weight: bold;">
-                      <a class="btn btn-primary" id='btnpdfordenpag' href="{{ path('admin_pdf_ordenpago',{ 'idEstudiante': idUsuarioEst,'idCarrera':idCarrera,'ciclo':idCiclo,'carrera':carrera,'identificacion':identificacion}) }}" target="_blank">Imprimir Orden de Pago</a>
+                      <a class="btn btn-success" id='btnpdfordenpag' href="{{ path('admin_pdf_ordenpago',{ 'idEstudiante': idUsuarioEst,'idCarrera':idCarrera,'ciclo':idCiclo,'carrera':carrera,'identificacion':identificacion}) }}" target="_blank">Imprimir Orden de Pago</a>
                     </div></div>
                 </div>
                 </div>
