--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_legal_ordenpago.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_legal_ordenpago.html.twig
@@ -48,7 +48,7 @@
                     <div class="col-lg-12" style="margin-top:10px;"><div class="col-lg-10"></div><div class="col-lg-2" style="right:-15px; padding-top: 6px; font-weight: bold;">
                       {% if cuenta==1 %}
                                 {% if banderalegalizar==1 %}
-                                              <a class="btn btn-primary " id='btnlegalorden'>Legalizar</a>
+                                              <a class="btn btn-success " id='btnlegalorden'>Legalizar</a>
                                 {% endif %}        
                             {% endif %}
                     </div></div>
