--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/consultaEstudiantesXCarrera.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/consultaEstudiantesXCarrera.html.twig
@@ -11,7 +11,7 @@
 <div class="col-lg-12">
   <div class="panel panel-primary">
     <div class="panel-body">
-      <h2 align="center"><b>REPORTE DE ESTUDIANTE POR CARRERA</b></h2>
+      <h2 align="center"><b>Reportes de Estudiantes por Carrera</b></h2>
       <div class="panel-group" id="accordion">
       {% for  carrera in estudianteCarrera.carreras%} 
 
