--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/consulta_materia_aprobadas_estudiantes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/consulta_materia_aprobadas_estudiantes.html.twig
@@ -6,7 +6,7 @@
 <div class="col-lg-12">
   <div class="panel  panel-primary">
     <div class="panel-body"><h2 align="center">
-      <b>REPORTE DE MATERIAS APROBADAS POR EL ESTUDIANTE</b></h2>
+      <b>Reportes de Materias aprobadas por el Estudiante</b></h2>
       <div class="panel-group" id="accordion">
         {% for  carrera in estudianteCarrera.carreras%} 
         <div class="panel panel-default">
