--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_buscar_anulacion.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_buscar_anulacion.html.twig
@@ -5,7 +5,7 @@
             <thead>
                 <tr>
                     <th align='center' colspan='4'>
-                          <h4 align="center"><b>Registro de Anulacion</b></h4>  
+                          <h4 align="center"><b>Registro de Anulación</b></h4>  
                     </th>
                 </tr>
                 <tr>
