--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_buscar_orden.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_buscar_orden.html.twig
@@ -26,8 +26,8 @@
                     <td align='left' valign='center'>
                         
                         <select  name='selconsulta'>
-                          <option value="cedula" > Cedula de Identidad</option>
-                          <option value="codigo"> Codigo del Estudiante </option>
+                          <option value="cedula" > Cédula de Identidad</option>
+                          <option value="codigo"> Código del Estudiante </option>
                         </select >
                     </td>
                     <td>
