--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_legal_ordenpago.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_legal_ordenpago.html.twig
@@ -10,7 +10,7 @@
                     <table  align='center' border='1' id="table-listarpago">
                         <thead>
                             <tr>
-                                <td colspan='5'><input   class="form-control" id="disabledInput" type="text" placeholder="Estudiante : {{ estudiante }} Identificacion : {{ identificacion }}" disabled STYLE="color: #FFFFFF; font-family: Verdana; font-weight: bold; font-size: 15px; background-color: #0B2161;" > </td>
+                                <td colspan='5'><input   class="form-control" id="disabledInput" type="text" placeholder="Estudiante : {{ estudiante }} Identificación : {{ identificacion }}" disabled STYLE="color: #FFFFFF; font-family: Verdana; font-weight: bold; font-size: 15px; background-color: #0B2161;" > </td>
                             </tr>
                             <tr>
                                 <th style="text-align:center" >Ciclo</th>
