--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_home.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_home.html.twig
@@ -32,7 +32,7 @@
                                                               <ul class="nav nav-tabs" id="na_{{ facultad.Carrera }}_{{ facultad.Facultad }}_tabs">
                                                                   <li class="active_a"><a data-toggle="tab" class='tabnotas' id="na_{{ facultad.Carrera }}_{{ facultad.Facultad }}_{{ facultad.idCiclo }}"><b>Notas Actuales</b></a>
                                                                   </li>
-                                                                  <li class='temporal'><a data-toggle="tab" class='tabnotas' id="nh_{{ facultad.Carrera }}_{{ facultad.Facultad }}_{{ facultad.idCiclo }}"><b>Historico de Notas</b></a>
+                                                                  <li class='temporal'><a data-toggle="tab" class='tabnotas' id="nh_{{ facultad.Carrera }}_{{ facultad.Facultad }}_{{ facultad.idCiclo }}"><b>Histórico de Notas</b></a>
                                                                   </li>
                                                                   <!-- <li class='temporal'><a data-toggle="tab" class='tabnotas' id="re_{{ facultad.Carrera }}_{{ facultad.Facultad }}_{{ facultad.idCiclo }}"><b>Resumen</b></a>
                                                                   </li> -->
